# rust-opencv-playground

./: Cargo.toml  README.md
src/: main.rs
