[package]
name = "rust-opencv-playground"
version = "0.1.0"
authors = ["Rafael Sierra <rafael.jorge@deliveryhero.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.36", default-features = false, features = ["opencv-32"]}
